--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,19 @@ android {
 
 dependencies {
 
+    def jetpack_version = "2.1.0"
+    def arch_version = '2.2.0-alpha01'
+    def retrofit_version = "2.6.1"
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.0.1"
 }
